# flipperzero-sensors

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: furi.rs  furi_hal_power.rs  furi_pubsub.rs  furi_record.rs  gui.rs  lib.rs  nicla_sense_env.rs  storage.rs  view.rs  view_dispatcher.rs
src/furi/: hal.rs  pubsub.rs  record.rs
src/furi/hal/: power.rs  serial.rs
src/gui/: view.rs  view_dispatcher.rs  view_port.rs
