#cargo-features = ["different-binary-name"]

[package]
name = "flipperzero-gas-sensors"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
autobins = true
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "shared"

[dependencies]
flipperzero = { path = "..\\flipperzero-rs\\crates\\flipperzero" }
flipperzero-sys = { path = "..\\flipperzero-rs\\crates\\sys" }
flipperzero-rt = { path = "..\\flipperzero-rs\\crates\\rt" }
heapless = "0.8.0"
embedded-graphics-core = "0.4.0"
embedded-graphics = "0.8.1"
eg-seven-segment = "0.2.0"
